# TrustDoc

./: .gitignore  Cargo.toml  GITHUB_DESCRIPTION.md  README.md  test-convert.csv  test-document.json  test-key.verifying  test-verification.html
.github/workflows/: build-desktop-viewer.yml  pages.yml
data/tdf/: 2024.09.13 Guido Frenken Evis International #1 €9,000.tdf  2024.09.19 Pels Rijcken 1409719 €75,343.tdf  2024.09.26 Fried Frank 240301081 €854,331.81.tdf  2024.10.11 Guido Frenken #2 €9,000.tdf  2024.12.02 Guido Frenken  EVIS-International #3 €3,000.tdf  2024.12.02 Guido Frenken  EVIS-International #4 €6,630.77.tdf  2025.01.08 Maven Global 14156 £12,500.tdf  2025.01.10 Fried Frank 250300077 €424,871.09.tdf  2025.01.24 Guido Frenken #5 €3000.tdf  Pioneer-Infrastructure-Partners-II-SCSp-invoice-BDO-2024-10-29-INV-00599278.tdf  Pioneer-Infrastructure-Partners-II-SCSp-invoice-BDO-LLP-2024-12-24-INV-00625916.tdf  Pioneer-Infrastructure-Partners-II-SCSp-invoice-Pioneer-Point-Partners-LLP-2024-09-18-2024FT001.tdf  Pioneer-Infrastructure-Partners-II-SCSp-invoice-Pioneer-Point-Partners-LLP-2024-09-24-2024FT005.tdf  Pioneer-Infrastructure-Partners-II-SCSp-invoice-Pioneer-Point-Partners-LLP-2024-10-08-2024FT006.tdf  Pioneer-Infrastructure-Partners-II-SCSp-invoice-Pioneer-Point-Partners-LLP-2024-10-08-2024FT007.tdf  Pioneer-Point-Partners-LLP-2024-09-18-2024FT002.tdf
docs/: ADVANCED.md  API.md  ARCHITECTURE.md  BRUTE_FORCE_ATTACK_RESULTS.md  BUILD.md  CHANGELOG.md  COMPLETE_FEATURES.md  CONTRIBUTING.md  CONVERSION_SYSTEM.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  EXECUTIVE_REPORT_SHOWCASE.md  FEATURES.md  GITHUB_PAGES_SETUP.md  HOW_TO_READ_TDF.md  HOW_TO_VERIFY_SECURITY.md  IMPLEMENTATION_STATUS.md  INDEX.md  INSTALL.md  INTEGRATION.md  MAINSTREAM_ADOPTION_ANALYSIS.md  MARKETING_STRATEGY.md  MULTIPARTY.md  PUSH_INSTRUCTIONS.md  QUICK_START.md  QUICK_START_READ.md  REMEDIATION_STATUS.md  SECURITY_ASSURANCE.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_MODULES.md  SECURITY_TESTING.md  SECURITY_TESTS_STATUS.md  SETUP_VIEWER.md  SPEC.md  SYSTEM_VERIFICATION.md  THREAT_MODEL.md  TIMESTAMP.md  TROUBLESHOOTING.md  USAGE.md  VIEWER_ARCHITECTURE_DECISIONS.md  (+8 more)
docs/security/: SECURITY-AUDIT-REPORT.md  SECURITY-REMEDIATION-PLAN.md
docs/test-data/: 2024.07.22 TDE LLC #1 $9,039.38.tdf  2024.11.22 Pels Rijcken 1411998 €3,405.tdf  Pioneer-Infrastructure-Partners-II-SCSp-invoice-Pioneer-Point-Partners-LLP-2024-10-14-2024FT008.tdf  Pioneer-Infrastructure-Partners-II-SCSp-invoice-Pioneer-Point-Partners-LLP-2024-10-23-2024-FT009.tdf  Pioneer-Infrastructure-Partners-II-SCSp-invoice-Pioneer-Point-Partners-LLP-2024-11-19-2024FT010.tdf  Pioneer-Infrastructure-Partners-II-SCSp-invoice-RBSi-2024-11-22-777362.tdf  Pioneer-Point-Partners-LLP-2024-09-18-2024FT003.tdf
examples/: balance-sheet.json  balance-sheet.tdf  demo-invoice.tdf  executive-financial-report-corporate.tdf  executive-financial-report-premium.tdf  executive-financial-report-signed.tdf  executive-financial-report.json  executive-financial-report.tdf  executive-report-styles.css  extracted-data.json  extracted.json  invoice-workflow.json  invoice.json  quarterly-report.json  read_tdf_example.rs  test-extracted.json  test-import-improved.tdf  test-import.tdf  test-output.tdf  test-signed.tdf  trusted-signers.json
marketing/business/: Business-Case-TDF.md  Business-Plan-TDF-Luxembourg.md
marketing/demos/: Demo-Script-5min.md  Demo-Script-Full.md
marketing/presentations/: BDO-Specific-Pitch.md  Comparison-Charts.md  Executive-Summary-OnePager.md  TDF-Client-Pitch-Deck.md  TDF-Investor-Pitch-Deck.md
marketing/technical/: TDF-Technical-Specification.md
marketing/whitepapers/: TDF-WhitePaper-Financial-Services.md
scripts/: build-all-packages.sh  performance-test.sh  security-check.sh
scripts/keys/: cfo-key.verifying  demo.secp256k1.verifying  demo.verifying  test-key.verifying  test-secp256k1.secp256k1.verifying  web3-demo.secp256k1.verifying
tdf-cli/: Cargo.toml
tdf-cli/src/: main.rs  utils.rs
tdf-cli/src/commands/: create.rs  export.rs  extract.rs  import.rs  info.rs  keygen.rs  mod.rs  revoke.rs  verify.rs  workflow.rs
tdf-convert/: Cargo.toml  README.md
tdf-convert/src/: csv.rs  docx.rs  error.rs  excel.rs  lib.rs  markdown.rs  pdf.rs  pptx.rs  text.rs
tdf-convert/src/styles/: default.css
tdf-core/: Cargo.toml
tdf-core/src/: archive.rs  audit.rs  config.rs  content.rs  crypto_utils.rs  document.rs  error.rs  error_sanitization.rs  integer_safety.rs  io.rs  lib.rs  merkle.rs  multiparty.rs  resource_limits.rs  revocation.rs  secure_key.rs  secure_random.rs  signature.rs  timestamp.rs  whitelist.rs
tdf-core/tests/: brute_force_attack_tests.rs  e2e_security_tests.rs  integration_tests.rs  security_hardening_tests.rs  security_tests.rs
tdf-desktop-viewer/: .gitignore  BRANDING.md  BUILD.md  FIXED_CONFIG.md  INSTALL_DEPS.md  PACKAGES.md  README.md  UX_ASSESSMENT.md  build-packages.sh  create-icons.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
tdf-desktop-viewer/icons/: README.md  create-brand-icons.sh  create-icns-python.py  create-icns.sh  create-icons-python.py
tdf-desktop-viewer/src/: app.ts  diagram.ts  documents.ts  index.html  key-details.ts  key-list.ts  keys.ts  main.ts  renderer.ts  settings.ts  styles.css  verification-panel.ts  viewer.ts
tdf-desktop-viewer/src-tauri/: Cargo.toml  tauri.conf.json
tdf-desktop-viewer/src-tauri/src/: documents.rs  keys.rs  main.rs
tdf-desktop-viewer/src/components/: Button.ts  ErrorBanner.ts  Icon.ts  KeyboardShortcutsHelp.ts  Modal.ts  (+2 more)
tdf-mobile/: App.tsx  README.md  app.json  package-lock.json  package.json
tdf-ts/: package-lock.json  package.json  tsconfig.json
tdf-ts/src/: cbor-web.d.ts  document.ts  extraction.ts  index.ts  verification.ts
tdf-viewer/: README.md  index.html  package-lock.json  package.json  vite.config.ts
tdf-viewer/src/: styles.css  verification.ts
tdf-wasm/: BUILD_WASM.md  Cargo.toml  README.md  build.sh
tdf-wasm/src/: lib.rs
website/: README.md  index.html  script.js  styles.css
(+18 files in other folders)
