[package]
name = "tdf-convert"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Format conversion library for TDF (TrustDoc Financial) - supports CSV, XLSX, DOCX, PPTX, TXT, MD, PDF"

[dependencies]
tdf-core = { path = "../tdf-core" }
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0"
chrono.workspace = true
uuid.workspace = true

# Format-specific dependencies
csv = "1.3"
calamine = "0.24"  # Excel (XLSX) support
zip = "0.6"  # For DOCX/PPTX (they're ZIP archives)
pdf-extract = "0.7"  # PDF support
pulldown-cmark = "0.9"  # Markdown support

