[package]
name = "tdf-desktop-viewer"
version = "0.1.0"
description = "Desktop viewer for TDF documents"
authors = ["TrustDoc Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/trustdoc/tdf"
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tdf-core = { path = "../../tdf-core" }
ed25519-dalek = "2.1"
k256 = "0.13"
rand_core = "0.6"
sha2 = "0.10"
chrono = "0.4"
dirs = "5.0"

[features]
default = []
